proptest-attributes/tests/compile-fail/empty_strategy.stderr
error: expected attribute arguments in parentheses: #[strategy(...)]
 --> $DIR/empty_strategy.rs:4:17
  |
4 | fn function_arn(#[strategy] arg: String) {}
  |                 ^^^^^^^^^^^
